# esp32s3-tusb-mtp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig  sdkconfig.old
main/: CMakeLists.txt  idf_component.yml
main/inc/tinyusb/: tusb_config.h
main/src/: init.c  main.c
main/src/monolith/: usb_descriptors.c.h  usb_mtp_impl.c.h
main/tasks/: tinyusb.c
